--- a/package.json
+++ b/package.json
@@ -4,10 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "next",
-    "build": "next build",
-    "start": "next start",
-    "export": "next build && next export"
+    "dev": "next dev",
+    "build": "next build && next export",
+    "start": "next start"
   },
   "keywords": [],
   "author": "",
