--- a/package.json
+++ b/package.json
@@ -12,19 +12,21 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@babel/core": "^7.14.2",
     "@fortawesome/fontawesome": "^1.1.5",
     "@fortawesome/fontawesome-free-brands": "^5.0.10",
     "@fortawesome/fontawesome-free-regular": "^5.0.10",
     "@fortawesome/fontawesome-free-solid": "^5.0.13",
     "@fortawesome/react-fontawesome": "0.0.18",
     "autoprefixer": "^9.1.5",
+    "babel-loader": "^8.2.2",
     "babel-plugin-module-resolver": "^3.1.1",
     "babel-plugin-wrap-in-js": "^1.1.1",
     "glob": "^7.1.3",
-    "next": "^7.0.0",
+    "next": "^10.2.0",
     "node-sass": "^4.9.3",
     "postcss-easy-import": "^3.0.0",
-    "postcss-loader": "^4.3.0",
+    "postcss-loader": "^3.0.0",
     "raw-loader": "^0.5.1",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
