--- a/amplify/.config/project-config.json
+++ b/amplify/.config/project-config.json
@@ -9,9 +9,9 @@
     "framework": "react",
     "config": {
       "SourceDir": ".",
-      "DistributionDir": ".next",
-      "BuildCommand": "next build && next export",
-      "StartCommand": "next start"
+      "DistributionDir": "build",
+      "BuildCommand": "npm run-script build",
+      "StartCommand": "npm run-script start"
     }
   }
 }
