--- a/package.json
+++ b/package.json
@@ -33,7 +33,6 @@
     "raw-loader": "^0.5.1",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
-    "sass-loader": "^7.1.0",
-    "webpack": "^5.37.0"
+    "sass-loader": "^7.1.0"
   }
 }
