amplify configuration in separate file

--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -21,5 +21,13 @@
         }
       ]
     }
+  },
+  "auth": {
+    "vorderio3fe6b080": {
+      "service": "Cognito",
+      "providerPlugin": "awscloudformation",
+      "dependsOn": [],
+      "customAuth": false
+    }
   }
 }
