--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "raw-loader": "^0.5.1",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
+    "react-icons": "^4.2.0",
     "sass-loader": "^7.1.0"
   }
 }
