Attempting to do SSR to be able to follow exactly the steps in the tutorial for authentication with amplify in next.js (https://dev.to/dabit3/the-complete-guide-to-next-js-authentication-2aco)

--- a/amplify/.config/project-config.json
+++ b/amplify/.config/project-config.json
@@ -9,7 +9,7 @@
     "framework": "react",
     "config": {
       "SourceDir": ".",
-      "DistributionDir": "out",
+      "DistributionDir": ".next",
       "BuildCommand": "npm run-script build",
       "StartCommand": "npm run-script start"
     }
