--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "next dev",
-    "build": "next build && next export",
+    "build": "next build",
     "start": "next start"
   },
   "keywords": [],
@@ -20,7 +20,8 @@
     "@fortawesome/fontawesome-free-solid": "^5.0.13",
     "@fortawesome/fontawesome-svg-core": "^1.2.35",
     "@fortawesome/react-fontawesome": "^0.1.14",
-    "autoprefixer": "^9.1.5",
+    "@tailwindcss/typography": "^0.4.1",
+    "autoprefixer": "^9.7.5",
     "aws-amplify": "^4.0.3",
     "babel-loader": "^8.2.2",
     "babel-plugin-module-resolver": "^3.1.1",
@@ -28,12 +29,14 @@
     "glob": "^7.1.3",
     "next": "^9.5.5",
     "node-sass": "^4.9.3",
+    "postcss": "^8.1.7",
     "postcss-easy-import": "^3.0.0",
     "postcss-loader": "^3.0.0",
     "raw-loader": "^0.5.1",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "react-icons": "^4.2.0",
-    "sass-loader": "^7.1.0"
+    "sass-loader": "^7.1.0",
+    "tailwindcss": "^1.8.10"
   }
 }
