Added "GO TO APP" button in main page. That button is now going to the authentication screen case the user is not already signed in, and to https://app.vorder.io case the user is signed in

--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -23,7 +23,7 @@
     }
   },
   "auth": {
-    "vorderio3fe6b080": {
+    "vordercognito": {
       "service": "Cognito",
       "providerPlugin": "awscloudformation",
       "dependsOn": [],
