--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@aws-amplify/ui-components": "^1.3.2",
     "@aws-amplify/ui-react": "^1.2.1",
     "@babel/core": "^7.14.2",
     "@fortawesome/fontawesome": "^1.1.5",
