Updated names for consistency in cognito pools

--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -23,7 +23,7 @@
     }
   },
   "auth": {
-    "vordercognito": {
+    "vorderioauth": {
       "service": "Cognito",
       "providerPlugin": "awscloudformation",
       "dependsOn": [],
