--- a/amplify/backend/auth/vorderioauth/vorderioauth-cloudformation-template.yml
+++ b/amplify/backend/auth/vorderioauth/vorderioauth-cloudformation-template.yml
@@ -117,6 +117,10 @@ Parameters:
   thirdPartyAuth:
     Type: String
             
+        
+  usernameAttributes:
+    Type: CommaDelimitedList
+      
   
   userPoolGroups:
     Type: String
@@ -176,7 +180,7 @@ Resources:
   # Created to allow the UserPool SMS Config to publish via the Simple Notification Service during MFA Process
     Type: AWS::IAM::Role
     Properties:
-      RoleName: !If [ShouldNotCreateEnvResources, 'vorderef0fb558_sns-role', !Join ['',[ 'sns', 'ef0fb558', !Select [3, !Split ['-', !Ref 'AWS::StackName']], '-', !Ref env]]]
+      RoleName: !If [ShouldNotCreateEnvResources, 'vorder1446e6e1_sns-role', !Join ['',[ 'sns', '1446e6e1', !Select [3, !Split ['-', !Ref 'AWS::StackName']], '-', !Ref env]]]
       AssumeRolePolicyDocument:
         Version: "2012-10-17"
         Statement:
@@ -188,10 +192,10 @@ Resources:
               - "sts:AssumeRole"
             Condition:
               StringEquals:
-                sts:ExternalId: vorderef0fb558_role_external_id
+                sts:ExternalId: vorder1446e6e1_role_external_id
       Policies:
         -
-          PolicyName: vorderef0fb558-sns-policy
+          PolicyName: vorder1446e6e1-sns-policy
           PolicyDocument:
             Version: "2012-10-17"
             Statement:
@@ -237,14 +241,14 @@ Resources:
           RequireSymbols: false
           RequireUppercase: false
       
+      UsernameAttributes: !Ref usernameAttributes
+      
       MfaConfiguration: !Ref mfaConfiguration
       SmsVerificationMessage: !Ref smsVerificationMessage
       SmsAuthenticationMessage: !Ref smsAuthenticationMessage
       SmsConfiguration:
         SnsCallerArn: !GetAtt SNSRole.Arn
-        ExternalId: vorderef0fb558_role_external_id
-    
-    DependsOn: SNSRole
+        ExternalId: vorder1446e6e1_role_external_id
     
   
   UserPoolClientWeb:
@@ -252,7 +256,7 @@ Resources:
   # Depends on UserPool for ID reference
     Type: "AWS::Cognito::UserPoolClient"
     Properties:
-      ClientName: vorderef0fb558_app_clientWeb
+      ClientName: vorder1446e6e1_app_clientWeb
       
       ReadAttributes: !Ref userpoolClientReadAttributes
       WriteAttributes: !Ref userpoolClientWriteAttributes
@@ -265,7 +269,7 @@ Resources:
   # Depends on UserPool for ID reference
     Type: "AWS::Cognito::UserPoolClient"
     Properties:
-      ClientName: vorderef0fb558_app_client
+      ClientName: vorder1446e6e1_app_client
       
       ReadAttributes: !Ref userpoolClientReadAttributes
       WriteAttributes: !Ref userpoolClientWriteAttributes
@@ -279,7 +283,7 @@ Resources:
   # Created to execute Lambda which gets userpool app client config values
     Type: 'AWS::IAM::Role'
     Properties:
-      RoleName: !If [ShouldNotCreateEnvResources, !Ref userpoolClientLambdaRole, !Join ['',['upClientLambdaRole', 'ef0fb558', !Select [3, !Split ['-', !Ref 'AWS::StackName']], '-', !Ref env]]]
+      RoleName: !If [ShouldNotCreateEnvResources, !Ref userpoolClientLambdaRole, !Join ['',['upClientLambdaRole', '1446e6e1', !Select [3, !Split ['-', !Ref 'AWS::StackName']], '-', !Ref env]]]
       AssumeRolePolicyDocument:
         Version: '2012-10-17'
         Statement:
@@ -333,7 +337,7 @@ Resources:
   # Marked as depending on UserPoolClientRole for easier to understand CFN sequencing
     Type: 'AWS::IAM::Policy'
     Properties:
-      PolicyName: vorderef0fb558_userpoolclient_lambda_iam_policy
+      PolicyName: vorder1446e6e1_userpoolclient_lambda_iam_policy
       Roles:
         - !Ref UserPoolClientRole
       PolicyDocument:
@@ -350,7 +354,7 @@ Resources:
   # Marked as depending on UserPoolClientLambdaPolicy for easier to understand CFN sequencing
     Type: 'AWS::IAM::Policy'
     Properties:
-      PolicyName: vorderef0fb558_userpoolclient_lambda_log_policy
+      PolicyName: vorder1446e6e1_userpoolclient_lambda_log_policy
       Roles:
         - !Ref UserPoolClientRole
       PolicyDocument:
@@ -382,132 +386,6 @@ Resources:
   
 
   
-  # BEGIN MFA LAMBDA RESOURCES
-  MFALambdaRole:
-  # Created to execute Lambda which sets MFA config values
-    Type: 'AWS::IAM::Role'
-    Properties:
-      RoleName: !If [ShouldNotCreateEnvResources, 'vorderef0fb558_totp_lambda_role', !Join ['',['vorderef0fb558_totp_lambda_role', '-', !Ref env]]]
-      AssumeRolePolicyDocument:
-        Version: '2012-10-17'
-        Statement:
-          - Effect: Allow
-            Principal:
-              Service:
-                - lambda.amazonaws.com
-            Action:
-              - 'sts:AssumeRole'
-      Policies:
-      - PolicyName: vorderef0fb558_totp_pass_role_policy
-        PolicyDocument:
-          Version: 2012-10-17
-          Statement:
-            - Effect: Allow
-              Action:
-                - 'iam:PassRole'
-              Resource: !If [ShouldNotCreateEnvResources, 'arn:aws:iam:::role/vorderef0fb558_totp_lambda_role', !Join ['',['arn:aws:iam:::role/vorderef0fb558_totp_lambda_role', '-', !Ref env]]]
-  MFALambda:
-  # Lambda which sets MFA config values
-  # Depends on MFALambdaRole for role ARN
-    Type: 'AWS::Lambda::Function'
-    Properties:
-      Code:
-        ZipFile: !Join
-          - |+
-          - - 'const response = require(''cfn-response'');'
-            - 'const aws = require(''aws-sdk'');'
-            - 'const identity = new aws.CognitoIdentityServiceProvider();'
-            - 'exports.handler = (event, context, callback) => {'
-            - ' if (event.RequestType == ''Delete'') { '
-            - '   response.send(event, context, response.SUCCESS, {})'
-            - ' }'
-            - ' if (event.RequestType == ''Update'' || event.RequestType == ''Create'') {'
-            - '   let totpParams = {};'
-            - '   try {'
-            - '     totpParams = {'
-            - '       UserPoolId: event.ResourceProperties.userPoolId,'
-            - '       MfaConfiguration: event.ResourceProperties.mfaConfiguration,'
-            - '       SmsMfaConfiguration: {'
-            - '         SmsAuthenticationMessage: event.ResourceProperties.smsAuthenticationMessage,'
-            - '         SmsConfiguration: {'
-            - '           SnsCallerArn: event.ResourceProperties.smsConfigCaller,'
-            - '           ExternalId: event.ResourceProperties.smsConfigExternalId'
-            - '         }'
-            - '       },'
-            - '       SoftwareTokenMfaConfiguration: {Enabled: event.ResourceProperties.totpEnabled.toLowerCase() === ''true'' ? true : false}'
-            - '     };'
-            - '   } catch(e) {'
-            - '     response.send(event, context, response.FAILED, {e});'
-            - '   };'
-            - '   identity.setUserPoolMfaConfig(totpParams).promise()'
-            - '     .then((res) => {'
-            - '       response.send(event, context, response.SUCCESS, {res});'
-            - '     })'
-            - '     .catch((err) => {'
-            - '       response.send(event, context, response.FAILED, {err});'
-            - '     });'
-            - ' }'
-            - '};'
-      Handler: index.handler
-      Runtime: nodejs12.x
-      Timeout: '300'
-      Role: !GetAtt
-        - MFALambdaRole
-        - Arn
-    DependsOn: MFALambdaRole
-  MFALambdaPolicy:
-  # Sets policy for the role that executes the MFA Lambda
-  # Depends on Userpool for Arn
-  # Marked as depending on MFALambda for easier to understand CFN sequencing
-    Type: 'AWS::IAM::Policy'
-    Properties:
-      PolicyName: vorderef0fb558_totp_lambda_iam_policy
-      Roles:
-        - !If [ShouldNotCreateEnvResources, 'vorderef0fb558_totp_lambda_role', !Join ['',['vorderef0fb558_totp_lambda_role', '-', !Ref env]]]
-      PolicyDocument:
-        Version: '2012-10-17'
-        Statement:
-          - Effect: Allow
-            Action:
-              - 'cognito-idp:SetUserPoolMfaConfig'
-            Resource: !GetAtt UserPool.Arn
-    DependsOn: MFALambda
-  MFALogPolicy:
-  # Sets log policy for the role that executes the MFA Lambda
-  # Marked as depending on MFALambdaPolicy for easier to understand CFN sequencing
-    Type: 'AWS::IAM::Policy'
-    Properties:
-      PolicyName: vorderef0fb558_totp_lambda_log_policy
-      Roles:
-        - !If [ShouldNotCreateEnvResources, 'vorderef0fb558_totp_lambda_role', !Join ['',['vorderef0fb558_totp_lambda_role', '-', !Ref env]]]
-      PolicyDocument:
-        Version: 2012-10-17
-        Statement:
-          - Effect: Allow
-            Action:
-              - 'logs:CreateLogGroup'
-              - 'logs:CreateLogStream'
-              - 'logs:PutLogEvents'
-            Resource: !Sub
-              - arn:aws:logs:${region}:${account}:log-group:/aws/lambda/${lambda}:log-stream:*
-              - { region: !Ref "AWS::Region",  account: !Ref "AWS::AccountId", lambda: !Ref MFALambda}
-    DependsOn: MFALambdaPolicy
-  MFALambdaInputs:
-  # Values passed to MFA Lambda
-  # Depends on UserPool for Arn
-  # Depends on MFALambda for Arn
-  # Marked as depending on MFALambdaPolicy for easier to understand CFN sequencing
-    Type: 'Custom::LambdaCallout'
-    Properties:
-      ServiceToken: !GetAtt MFALambda.Arn
-      userPoolId: !Ref UserPool
-      mfaConfiguration: !Ref mfaConfiguration
-      totpEnabled: false
-      smsConfigCaller: !GetAtt SNSRole.Arn
-      smsAuthenticationMessage: !Ref smsAuthenticationMessage
-      smsConfigExternalId: vorderef0fb558_role_external_id
-    DependsOn: MFALogPolicy
-  
     
   # BEGIN IDENTITY POOL RESOURCES
   
@@ -516,7 +394,7 @@ Resources:
   # Always created
     Type: AWS::Cognito::IdentityPool
     Properties:
-      IdentityPoolName: !If [ShouldNotCreateEnvResources, 'vorder_identitypool', !Join ['',['vorder_identitypool', '__', !Ref env]]]
+      IdentityPoolName: !If [ShouldNotCreateEnvResources, 'vorderio_auth', !Join ['',['vorderio_auth', '__', !Ref env]]]
       
       CognitoIdentityProviders:
         - ClientId:  !Ref UserPoolClient
@@ -574,10 +452,6 @@ Outputs :
   AppClientSecret:
     Value: !GetAtt UserPoolClientInputs.appSecret
     Condition: ShouldOutputAppClientSecrets
-  
-  CreatedSNSRole:
-    Value: !GetAtt SNSRole.Arn
-    Description: role arn
   
   
   
