--- a/package.json
+++ b/package.json
@@ -14,30 +14,23 @@
   "dependencies": {
     "@aws-amplify/ui-components": "^1.3.2",
     "@aws-amplify/ui-react": "^1.2.1",
-    "@babel/core": "^7.14.2",
+    "@babel/core": "^7.14.3",
     "@fortawesome/fontawesome": "^1.1.5",
     "@fortawesome/fontawesome-free-brands": "^5.0.10",
     "@fortawesome/fontawesome-free-regular": "^5.0.10",
     "@fortawesome/fontawesome-free-solid": "^5.0.13",
     "@fortawesome/fontawesome-svg-core": "^1.2.35",
     "@fortawesome/react-fontawesome": "^0.1.14",
-    "@tailwindcss/typography": "^0.4.1",
-    "autoprefixer": "^9.7.5",
     "aws-amplify": "^4.0.3",
-    "babel-loader": "^8.2.2",
-    "babel-plugin-module-resolver": "^3.1.1",
-    "babel-plugin-wrap-in-js": "^1.1.1",
+    "css-loader": "^5.2.6",
     "glob": "^7.1.3",
     "next": "^9.5.5",
-    "node-sass": "^4.9.3",
-    "postcss": "^8.1.7",
-    "postcss-easy-import": "^3.0.0",
-    "postcss-loader": "^3.0.0",
     "raw-loader": "^0.5.1",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "react-icons": "^4.2.0",
-    "sass-loader": "^7.1.0",
-    "tailwindcss": "^1.8.10"
+    "sass": "^1.34.0",
+    "sass-loader": "^7.3.1",
+    "style-loader": "^2.0.0"
   }
 }
