--- a/amplify.yml
+++ b/amplify.yml
@@ -7,7 +7,7 @@ frontend:
     build:
       commands:
         - npm run build
-        - AWS_BRANCH=${AWS_BRANCH}
+        - NEXT_PUBLIC_AWS_BRANCH=${AWS_BRANCH}
   artifacts:
     baseDirectory: .next
     files:
