--- a/amplify.yml
+++ b/amplify.yml
@@ -6,6 +6,7 @@ frontend:
         - npm ci
     build:
       commands:
+        - if [ "${AWS_BRANCH}" = "master" ]; then echo "NEXT_PUBLIC_AWS_BRANCH=dev.vorder.io" > .env.local; else echo "NEXT_PUBLIC_AWS_BRANCH=app-dev.vorder.io" > .env.local; fi
         - npm run build
   artifacts:
     baseDirectory: .next
